--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,11 +5,11 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Work Experience"
-    url: /work_experience/ 
+  # - title: "Work Experience"
+  #   url: /work_experience/ 
     
   - title: "Education"
-    url: /education/ 
+     url: /education/ 
   
   - title: "CV"
     url: /cv/
