--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@
 
 main:
 
-  - title: "Education"
-     url: /education/ 
+  # - title: "Education"
+  #    url: /education/ 
   
   - title: "CV"
     url: /cv/
