--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,14 +9,14 @@ main:
   - title: "Education"
     url: /education/ 
   
-  - title: "CV"
-    url: /cv/
+  #- title: "CV"
+  #  url: /cv/
 
-  - title: "Blog Posts"
-    url: /year-archive/
+  #- title: "Blog Posts"
+  #  url: /year-archive/
     
-  - title: "Publications"
-    url: /publications/
+  #- title: "Publications"
+  #  url: /publications/
 
   # - title: "Talks"
   #   url: /talks/    
