--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,14 +12,14 @@ main:
   - title: "Education"
     url: /education/ 
 
+  - title: "Publications"
+    url: /publications/
+
   #- title: "CV"
   #  url: /cv/
 
   #- title: "Blog Posts"
   #  url: /year-archive/
-    
-  #- title: "Publications"
-  #  url: /publications/
 
   # - title: "Talks"
   #   url: /talks/    
