--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,9 @@ main:
   - title: "Education"
     url: /education/ 
 
+  - title: "Papers"
+    url: /papers/ 
+
   # - title: "Publications"
   #   url: /publications/
 
