--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Data Scientist - PhD in Physics"
   location         : "Stockholm, Sweden"
-  employer         : "Swedbank"
+  employer         : "ASSA ABLOY"
   uri              : # 
   email            : #"none@example.org" 
 
