--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,8 @@ main:
   - title: "Papers"
     url: /papers/ 
   
-  #- title: "Blog Posts"
-  #  url: /year-archive/
+  - title: "Notes" #"Blog Posts"
+    url: /year-archive/
 
   # - title: "Publications"
   #   url: /publications/
